Fixed spacing for profiles

--- a/angular-workspace/src/assets/projects/seek/css/style.css
+++ b/angular-workspace/src/assets/projects/seek/css/style.css
@@ -970,6 +970,7 @@ h1, h2, h3, h4, h5, h6 {
 .fh5co-person {
   border: 2px solid #f2f2f2;
   padding: 80px 30px 30px 30px;
+  margin-bottom: 75px;
   float: left;
   width: 100%;
   position: relative;
